[tool.poetry]
authors = ["Daniel Schmidt <danischm@cisco.com>"]
description = "A CLI tool to perform syntactic and semantic validation of YAML files."
documentation = "https://github.com/netascode/iac-validate"
homepage = "https://github.com/netascode/iac-validate"
license = "LICENSE"
maintainers = ["Daniel Schmidt <danischm@cisco.com>"]
name = "iac-validate"
readme = "README.md"
repository = "https://github.com/netascode/iac-validate"
version = "0.2.7"

[tool.poetry.scripts]
iac-validate = "iac_validate.cli.main:main"

[tool.poetry.dependencies]
click = "^8.0.4"
errorhandler = "^2.0.1"
python = "^3.10"
ruamel-yaml = ">0.16.10"
yamale = "^4.0.3"

[tool.poetry.group.dev.dependencies]
ansible-core = "^2.17.7"
mypy = "^1.10.0"
pre-commit = "^3.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.6"

[tool.coverage.run]
source = ["iac_validate"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = 3.8
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core"]
