[tool.poetry]
authors = ["Daniel Schmidt <danischm@cisco.com>"]
description = "A CLI tool to perform syntactic and semantic validation of YAML files."
documentation = "https://github.com/netascode/nac-validate"
homepage = "https://github.com/netascode/nac-validate"
license = "LICENSE"
maintainers = ["Daniel Schmidt <danischm@cisco.com>"]
name = "nac-validate"
readme = "README.md"
repository = "https://github.com/netascode/nac-validate"
version = "0.3.0a2"

[tool.poetry.scripts]
iac-validate = "nac_validate.cli.main:app"
nac-validate = "nac_validate.cli.main:app"

[tool.poetry.dependencies]
errorhandler = "~=2.0"
nac-yaml = ">=0.1.3"
python = "~=3.10"
ruamel-yaml = "~=0.16"
typer = "~=0.15"
yamale = "~=6.0"

[tool.poetry.group.dev.dependencies]
ansible-core = "~=2.17"
pytest = "~=8.2"
pytest-cov = "~=6.0"
pytest-mock = "~=3.14"

[tool.coverage.run]
source = ["nac_validate"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core"]
